# StarDust

./: README.md
docker/: Dockerfile
docs/: README.md
pipelines/: ci.yml
src/: Makefile  envs.toml  pyproject.toml
src/stardust/domain/: models.py
